Update plugin to compatibilize with OpenSearch 3.2.0